--- a/Eureka-Server/src/main/resources/application.properties
+++ b/Eureka-Server/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+#Nombre de la aplicación o proyecto
 spring.application.name=Eureka-Server
+
+#Puerto por defecto de Eureka Server
 server.port=8761
 
+
+#Configuracion adicional:
+#La siguiente configuración hace que cualquier micro-servicio no dependa del registro en eureka server.
 eureka.client.register-with-eureka=false
+
+#Esta configuración hace que no se obtenga por default todos los micro-servicios registrados en Eureka.
 eureka.client.fetch-registry=false
 
