--- a/ConfigServer/pom.xml
+++ b/ConfigServer/pom.xml
@@ -30,6 +30,18 @@
 		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
 	</properties>
+
+<!---
+Según la versión de Java hay que implementar las dependencias con las
+versiones actualizadas, si inyectas manualmente la dependencia asegúrate
+que esté habilitada para la version de Java y Spring Boot que vayas a utilizar
+
+Dependencias:
+-Config Server
+-Eureka Discovery Client
+-Spring web
+-Config Client
+-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
