Descripción de las configuraciones en application.properties

--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,11 +1,25 @@
+# Nombre de la aplicación o proyecto
 spring.application.name=ConfigServe
+
+# Puerto random que se desea desplegar la aplicación configServer
 server.port=8888
 
+# Configuracion para obtener la configuración de la base de datos que se usara en el proyecto:
+# Repositorio donde se encuentra la configuración de la conexión a la base de datos
 spring.cloud.config.server.git.uri=https://github.com/WilliamsAvila/ConfigServer.git
+
+# Esta configuración es opcional ya que se puede trabajar con diferentes perfiles,
+# por ejemplo perfil de producción o testeo.
 spring.profiles.active=default
+
+# Esta configuración es opcional también, se utiliza cuando un repositorio es privado
 spring.cloud.config.server.git.username=WilliamsÁvila
 spring.cloud.config.server.git.password=${GIT_TOKEN}
 
+
+# La siguiente configuración es para registrar en el Eureka Server cuantas instancias se han levantado
+# del proyecto, en este caso configServer ya que diferentes micro-servicios o perfiles pueden tener
+# configuraciones diferentes
 eureka.instance.instance-id=${spring.application.name}:${random.value}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
