--- a/Demo1/src/main/resources/application.properties
+++ b/Demo1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Demo1
-spring.cloud.config.uri=http://localhost:8888
+# spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.label=main
 spring.profiles.default=qa
 
